--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <title>hy this is my page</title>
 </head>
 <body>
+<p>day 3</p>
 <h1>you are looking good</h1>
 <p> hy you are smart</p> 
 <p>you are beautiful</p>
 <h2>have a good day</h2>
-hy beautiful
+<h1>hy beautiful</h1>
 </body>
